# basics

repl/src/: main.rs
sesame/: Cargo.toml  example.txt
sesame/src/: main.rs
spoon/: Cargo.toml
spoon/src/: main.rs
systems/toy-os/: Cargo.toml  README.md  rust-toolchain.toml
systems/toy-os/.cargo/: config.toml
systems/toy-os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
systems/toy-os/src/allocator/: bump.rs  linked.rs
systems/toy-os/src/task/: executor.rs  keyboard.rs  mod.rs
systems/toy-os/tests/: basic_boot.rs  heap_allocator.rs  should_panic.rs
