[package]
name = "toy-os"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300

[package.metadata.bootloader]
physical-memory-offset = "0xfffff00000000000"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11"
spin = "0.9"
uart_16550 = "0.3"
volatile = "0.2"
x86_64 = "0.15"